--- a/WarZone/style.css
+++ b/WarZone/style.css
@@ -738,30 +738,9 @@ footer {
 
 @media (max-width: 768px) {
     nav {
-        flex-direction: column;
-        text-align: center;
+        display:hidden;
     }
 
-    .nav-container {
-        flex-direction: column;
-    }
-
-    nav ul {
-        flex-direction: column;
-        width: 100%;
-        padding: 10px 0;
-    }
-
-    nav ul li a {
-        display: block;
-        width: 100%;
-        padding: 12px;
-    }
-
-    .register-btn {
-        padding: 10px 15px;
-        font-size: 14px;
-    }
 
     #home {
         padding: 15px;
