--- a/WarZone/style.css
+++ b/WarZone/style.css
@@ -720,13 +720,9 @@ footer {
 /* Responsive Styles */
 @media (max-width: 1024px) {
     nav {
-        padding: 12px 15px;
+        display:hidden;
     }
     
-    nav ul {
-        gap: 10px;
-    }
-
     #home h1 {
         font-size: 2.5rem;
     }
