--- a/WarZone/style.css
+++ b/WarZone/style.css
@@ -720,7 +720,7 @@ footer {
 /* Responsive Styles */
 @media (max-width: 1024px) {
     nav {
-        display:hidden;
+        display:none;
     }
     
     #home h1 {
@@ -734,7 +734,7 @@ footer {
 
 @media (max-width: 768px) {
     nav {
-        display:hidden;
+        display:none;
     }
 
 
